SF Primes/src/objects/Account_Hierarchy_ProfileIds__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The allowed profiles to change the Digital services specialist field on the top account in the hierarchy</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Name__c</fullName>
        <label>Filed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Hierarchy ProfileIds</label>
</CustomObject>